🎨 Allow passing parents=False to ln.save

--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -114,8 +114,8 @@
    "source": [
     "# public Cell Ontology reference\n",
     "\n",
-    "celltype_bionty = lb.CellType.bionty()  # equals to bionty.CellType()\n",
-    "celltype_bionty"
+    "celltype_bt = lb.CellType.bionty()  # equals to bionty.CellType()\n",
+    "celltype_bt"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we import `lamindb` and `lnschema_bionty` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map cell types against ontologies and create SQL records within LaminDB to eventually make them queryable."
+    "Next we import `lamindb` and `lnschema_bt` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map cell types against ontologies and create SQL records within LaminDB to eventually make them queryable."
    ]
   },
   {
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bionty.inspect(celltypist_df[\"Cell Ontology ID\"], celltype_bionty.ontology_id);"
+    "celltype_bt.inspect(celltypist_df[\"Cell Ontology ID\"], celltype_bt.ontology_id);"
    ]
   },
   {
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bionty.inspect(celltypist_df[\"Low-hierarchy cell types\"], celltype_bionty.name);"
+    "celltype_bt.inspect(celltypist_df[\"Low-hierarchy cell types\"], celltype_bt.name);"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bionty.search(celltypist_df[\"Low-hierarchy cell types\"][0], top_hit=True)"
+    "celltype_bt.search(celltypist_df[\"Low-hierarchy cell types\"][0], top_hit=True)"
    ]
   },
   {
@@ -284,9 +284,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bionty.inspect(\n",
+    "celltype_bt.inspect(\n",
     "    [i.rstrip(\"s\") for i in celltypist_df[\"Low-hierarchy cell types\"]],\n",
-    "    celltype_bionty.name,\n",
+    "    celltype_bt.name,\n",
     ");"
    ]
   },
@@ -497,7 +497,7 @@
    "source": [
     "search_results = []\n",
     "for term in high_terms_umapped:\n",
-    "    search_results.append(celltype_bionty.search(term, top_hit=True))\n",
+    "    search_results.append(celltype_bt.search(term, top_hit=True))\n",
     "\n",
     "search_results"
    ]
@@ -521,7 +521,7 @@
    "source": [
     "for name in high_terms_umapped:\n",
     "    if name == \"T cells\":\n",
-    "        record = lb.CellType.from_bionty(name=\"T cell\")\n",
+    "        record = lb.CellType.from_bt(name=\"T cell\")\n",
     "        record.add_synonym(name)\n",
     "        record.save()\n",
     "    else:\n",
