--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -70,6 +70,7 @@
    "outputs": [],
    "source": [
     "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
+    "import lamindb as ln\n",
     "\n",
     "!lamin init --storage bio-lineage --schema bionty"
    ]
@@ -79,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import `lamindb` and `lnschema_bionty` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map AnnData metadata annotations against ontologies and create SQL records within LaminDB to eventually make them queryable."
+    "Import `lamindb` and `lnschema_bt` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map AnnData metadata annotations against ontologies and create SQL records within LaminDB to eventually make them queryable."
    ]
   },
   {
@@ -89,7 +90,9 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb"
+    "import lnschema_bionty as lb\n",
+    "\n",
+    "ln.settings.verbosity = 3  # show hints"
    ]
   },
   {
@@ -501,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types_bionty_lookup = lb.CellType.lookup()"
+    "cell_types_bt_lookup = lb.CellType.lookup()"
    ]
   },
   {
@@ -514,10 +517,19 @@
     "    suffix=\".h5ad\",\n",
     "    key__startswith=\"subset\",\n",
     "    cell_types__in=[\n",
-    "        cell_types_bionty_lookup.hematopoietic_stem_cell,\n",
-    "        cell_types_bionty_lookup.t_cell,\n",
+    "        cell_types_bt_lookup.hematopoietic_stem_cell,\n",
+    "        cell_types_bt_lookup.t_cell,\n",
     "    ],\n",
     ").first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le_subset"
    ]
   },
   {
@@ -568,7 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset.run.inputs.values()"
+    "file_subset.run.inputs.all()"
    ]
   },
   {
