--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -451,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "records = list(records_names.values())\n",
+    "records = set(records_names.values())\n",
     "\n",
     "ln.save(records)"
    ]
