--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -521,7 +521,7 @@
    "source": [
     "for name in high_terms_umapped:\n",
     "    if name == \"T cells\":\n",
-    "        record = lb.CellType.from_bt(name=\"T cell\")\n",
+    "        record = lb.CellType.from_bionty(name=\"T cell\")\n",
     "        record.add_synonym(name)\n",
     "        record.save()\n",
     "    else:\n",
