💚 Use CLI to init instnaces

--- a/docs/biology/enrichr.ipynb
+++ b/docs/biology/enrichr.ipynb
@@ -70,9 +70,7 @@
    "outputs": [],
    "source": [
     "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
-    "import lamindb as ln\n",
-    "\n",
-    "ln.setup.init(storage=\"./enrichr\", schema=\"bionty\")"
+    "!lamin init --storage ./enrichr --schema bionty"
    ]
   },
   {
