--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -69,10 +69,8 @@
    },
    "outputs": [],
    "source": [
-    "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
-    "import lamindb as ln\n",
-    "\n",
-    "!lamin init --storage bio-lineage --schema bionty"
+    "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
+    "!lamin init --storage ./bio-lineage --schema bionty"
    ]
   },
   {
