--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -70,9 +70,7 @@
    "outputs": [],
    "source": [
     "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
-    "import lamindb as ln\n",
-    "\n",
-    "ln.setup.init(storage=\"./celltypist\", schema=\"bionty\")"
+    "!lamin init --storage ./celltypist --schema bionty"
    ]
   },
   {
