📝 Updated Celltypist example with parents tracking (#10)

--- a/docs/biology/enrichr.ipynb
+++ b/docs/biology/enrichr.ipynb
@@ -49,19 +49,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gseapy as gp\n",
-    "import scanpy as sc\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from lamin_examples import datasets as ds"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -75,12 +62,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
-    "\n",
-    "!lamin init --storage enrichr --schema bionty"
+    "!lamin init --storage ./enrichr --schema bionty"
    ]
   },
   {
@@ -90,7 +80,17 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "from lnschema_bionty import Pathway, Gene"
+    "import lnschema_bionty as lb\n",
+    "\n",
+    "lb.settings.species = \"human\"  # globally set species\n",
+    "\n",
+    "import gseapy as gp\n",
+    "import scanpy as sc\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from lamin_examples import datasets as ds\n",
+    "\n",
+    "ln.settings.verbosity = 3  # show hints"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bionty = Pathway.bionty()  # equals to bionty.Pathway()\n",
+    "pathway_bionty = lb.Pathway.bionty()  # equals to bionty.Pathway()\n",
     "pathway_bionty"
    ]
   },
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_records = ln.parse(go_bp_parsed.keys(), Pathway.ontology_id)"
+    "pathway_records = lb.Pathway.from_values(go_bp_parsed.keys(), lb.Pathway.ontology_id)"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_records[:3]"
+    "lb.Pathway.from_bionty(ontology_id=\"GO:0015868\")"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.save(pathway_records);"
+    "ln.save(pathway_records, parents=False)  # not recursing through parents"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_records = ln.parse(all_genes, Gene.symbol)"
+    "gene_records = lb.Gene.from_values(all_genes, lb.Gene.symbol)"
    ]
   },
   {
@@ -593,7 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_featureset = ln.FeatureSet.from_iterable(degs_up.names, Gene.symbol)"
+    "degs_up_featureset = ln.FeatureSet.from_values(degs_up.names, lb.Gene.symbol)"
    ]
   },
   {
@@ -602,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_dw_featureset = ln.FeatureSet.from_iterable(degs_dw.names, Gene.symbol)"
+    "degs_dw_featureset = ln.FeatureSet.from_values(degs_dw.names, lb.Gene.symbol)"
    ]
   },
   {
@@ -638,8 +638,8 @@
     "]\n",
     "\n",
     "# get pathway records\n",
-    "enr_up_top10_pathways = ln.parse(enr_up_top10, Pathway.ontology_id)\n",
-    "enr_dw_top10_pathways = ln.parse(enr_dw_top10, Pathway.ontology_id)"
+    "enr_up_top10_pathways = lb.Pathway.from_values(enr_up_top10, lb.Pathway.ontology_id)\n",
+    "enr_dw_top10_pathways = lb.Pathway.from_values(enr_dw_top10, lb.Pathway.ontology_id)"
    ]
   },
   {
@@ -683,8 +683,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.featuresets.add(degs_up_featureset)\n",
-    "file.featuresets.add(degs_dw_featureset)"
+    "file.feature_sets.add(degs_up_featureset)\n",
+    "file.feature_sets.add(degs_dw_featureset)"
    ]
   },
   {
@@ -709,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(Pathway).filter(name__contains=\"interferon-beta\").df()"
+    "lb.Pathway.select(name__contains=\"interferon-beta\").df()"
    ]
   },
   {
@@ -726,7 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(Pathway).filter(genes__symbol=\"KIR2DL1\").df()"
+    "lb.Pathway.select(genes__symbol=\"KIR2DL1\").df()"
    ]
   },
   {
@@ -743,9 +743,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(ln.File).filter(\n",
-    "    featuresets__pathways__name__icontains=\"interferon-beta\"\n",
-    ").first()"
+    "ln.File.select(feature_sets__pathways__name__icontains=\"interferon-beta\").first()"
    ]
   },
   {
@@ -762,7 +760,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway = ln.select(Pathway, ontology_id=\"GO:0035456\").one()\n",
+    "pathway = lb.Pathway.select(ontology_id=\"GO:0035456\").one()\n",
     "pathway"
    ]
   },
@@ -772,7 +770,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs = ln.select(ln.FeatureSet).filter(pathways__ontology_id=pathway.ontology_id).one()"
+    "degs = ln.FeatureSet.select(pathways__ontology_id=pathway.ontology_id).one()"
    ]
   },
   {
@@ -854,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "6oxEIEduvo6w",
