--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -69,9 +69,8 @@
    },
    "outputs": [],
    "source": [
-    "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
-    "\n",
-    "!lamin init --storage bio-lineage --schema bionty"
+    "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
+    "!lamin init --storage ./bio-lineage --schema bionty"
    ]
   },
   {
@@ -79,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import `lamindb` and `lnschema_bionty` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map AnnData metadata annotations against ontologies and create SQL records within LaminDB to eventually make them queryable."
+    "Import `lamindb` and `lnschema_bt` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map AnnData metadata annotations against ontologies and create SQL records within LaminDB to eventually make them queryable."
    ]
   },
   {
@@ -89,7 +88,9 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb"
+    "import lnschema_bionty as lb\n",
+    "\n",
+    "ln.settings.verbosity = 3  # show hints"
    ]
   },
   {
@@ -161,19 +162,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "If you do not want auto-populated ontology_ids, use ln.parse(..., from_bionty=False).\n",
-    "\n",
-    "Also see: {doc}`docs:guide/parse`\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -205,8 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types = ln.parse(adata.obs.cell_type, lb.CellType.name)\n",
-    "tissues = ln.parse(adata.obs.tissue, lb.Tissue.name)"
+    "cell_types = lb.CellType.from_values(adata.obs.cell_type, lb.CellType.name)\n",
+    "tissues = lb.Tissue.from_values(adata.obs.tissue, lb.Tissue.name)"
    ]
   },
   {
@@ -465,7 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types = ln.parse(adata_subset.obs.cell_type, lb.CellType.name)"
+    "cell_types = lb.CellType.from_values(adata_subset.obs.cell_type, lb.CellType.name)"
    ]
   },
   {
@@ -514,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types_bionty_lookup = lb.CellType.lookup()"
+    "cell_types_bt_lookup = lb.CellType.lookup()"
    ]
   },
   {
@@ -527,10 +515,19 @@
     "    suffix=\".h5ad\",\n",
     "    key__startswith=\"subset\",\n",
     "    cell_types__in=[\n",
-    "        cell_types_bionty_lookup.hematopoietic_stem_cell,\n",
-    "        cell_types_bionty_lookup.t_cell,\n",
+    "        cell_types_bt_lookup.hematopoietic_stem_cell,\n",
+    "        cell_types_bt_lookup.t_cell,\n",
     "    ],\n",
     ").first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le_subset"
    ]
   },
   {
@@ -581,7 +578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset.run.inputs.values()"
+    "file_subset.run.inputs.all()"
    ]
   },
   {
