--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -778,7 +778,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.save(file_annotated)"
+    "file_annotated.save()"
    ]
   },
   {
@@ -812,7 +812,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(ln.File).filter(cell_types=db_lookup.tcm_naive_helper_t_cells).df()"
+    "ln.File.select(cell_types=db_lookup.tcm_naive_helper_t_cells).df()"
    ]
   },
   {
@@ -829,7 +829,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(ln.Transform).filter(files__name__icontains=\"celltypist\").df()"
+    "ln.Transform.select(files__description__icontains=\"celltypist\").df()"
    ]
   },
   {
