--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -21,7 +21,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cell types are categories that classify cells based on characteristics and behaviors, including gene expression patterns, morphology, and functional properties. This classification enables researchers to explore cellular diversity, comprehend cellular heterogeneity, and gain valuable insights into the specific roles and interactions of different cell types."
+    "Cell types classify cells based on public and private knowledge gained from studying gene expression patterns, morphology, functional & other properties.\n",
+    "\n",
+    "Long established cell types have known markers and properties but cell subtypes and states are continuously being discovered, better understood and knowledge gets refined.\n",
+    "\n",
+    "In this notebook, we use [CellTypist](https://www.celltypist.org), a computational tool for cell type classification in scRNA-seq data. It assigns cell types based on gene expression profiles."
    ]
   },
   {
@@ -29,15 +33,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the dynamic world of biotech and pharmaceutical research, where numerous single-cell datasets are generated, the ability to seamlessly query and integrate datasets across different internal groups based on, for example, specific cell types proves exceptionally valuable."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this notebook we are creating a cell type registry for all cell types that [CellTypist](https://www.celltypist.org) supports. CellTypist is a powerful computational tool for cell type classification in single-cell RNA sequencing data. It assigns cell types based on gene expression profiles within heterogeneous cell populations. We will further use CellTypist to classify cell types of a previously unannotated dataset and ingest the dataset with Lamin. Finally, we will demonstrate how to fetch datasets with cell type queries using Lamin."
+    "First, we create a cell type registry for cell types supported by CellTypist.\n",
+    "\n",
+    "Then, we'll use CellTypist to classify cell types of a previously unannotated dataset and ingest the dataset with LaminDB.\n",
+    "\n",
+    "Finally, we will demonstrate how to fetch datasets with cell type queries using LaminDB."
    ]
   },
   {
@@ -97,11 +97,18 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "\n",
     "import celltypist\n",
     "import pandas as pd\n",
     "\n",
     "ln.settings.verbosity = 3  # show hints"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a start, let's take a look at the public Cell Ontology."
    ]
   },
   {
@@ -110,8 +117,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# public Cell Ontology reference\n",
-    "\n",
     "celltype_bt = lb.CellType.bionty()  # equals to bionty.CellType()\n",
     "celltype_bt"
    ]
@@ -121,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we import `lamindb` and `lnschema_bt` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map cell types against ontologies and create SQL records within LaminDB to eventually make them queryable."
+    "## Create an in-house registry of CellTypist terms based on the public Cell Ontology"
    ]
   },
   {
@@ -129,15 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create an in-house CellType registry of CellTypist terms based on the public Cell Ontology"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fetching CellTypists immune cell encyclopedia"
+    "### Fetch CellTypist's immune cell encyclopedia"
    ]
   },
   {
@@ -154,10 +151,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltypist_df = pd.read_excel(\n",
-    "    \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
+    "celltypist_source_v2_remote = \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
+    "celltypist_source_v2_local = (\n",
+    "    ln.setup.settings.storage.cache_dir / \"celltypist_remote_source_v2.parquet\"\n",
     ")\n",
-    "celltypist_df"
+    "if celltypist_source_v2_local.exists():\n",
+    "    celltypist_df = pd.read_parquet(celltypist_source_v2_local)\n",
+    "else:\n",
+    "    celltypist_df = pd.read_excel(celltypist_source_v2_remote)\n",
+    "    celltypist_df.to_parquet(celltypist_source_v2_local)\n",
+    "\n",
+    "celltypist_df.head()"
    ]
   },
   {
@@ -293,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register CellTypist cell type encyclopedia in LaminDB"
+    "### Register CellTypist encyclopedia in LaminDB"
    ]
   },
   {
@@ -863,6 +867,15 @@
    "metadata": {},
    "source": [
     "This notebook is available at [https://github.com/laminlabs/lamin-examples](https://github.com/laminlabs/lamin-examples)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!lamin delete celltypist"
    ]
   }
  ],
