--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -53,10 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{warning}\n",
+    "To run this notebook, you need to load a LaminDB instance that has the `bionty` schema mounted.\n",
     "\n",
-    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
-    "```"
+    "Here, we'll create a test instance (skip if you'd like to run it using your instance):"
    ]
   },
   {
@@ -69,7 +68,6 @@
    },
    "outputs": [],
    "source": [
-    "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
     "!lamin init --storage ./celltypist --schema bionty"
    ]
   },
@@ -101,6 +99,15 @@
     "import pandas as pd\n",
     "\n",
     "ln.settings.verbosity = 3  # show hints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.track()"
    ]
   },
   {
@@ -142,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a first step we will read in CellTypist's immune cell encyclopedia. It provides mapped `ontology_id` of Cell Ontology (cl) for the majority of terms."
+    "As a first step we will read in CellTypist's immune cell encyclopedia"
    ]
   },
   {
@@ -151,16 +158,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltypist_source_v2_remote = \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
-    "celltypist_source_v2_local = (\n",
-    "    ln.setup.settings.storage.cache_dir / \"celltypist_remote_source_v2.parquet\"\n",
-    ")\n",
-    "if celltypist_source_v2_local.exists():\n",
-    "    celltypist_df = pd.read_parquet(celltypist_source_v2_local)\n",
-    "else:\n",
-    "    celltypist_df = pd.read_excel(celltypist_source_v2_remote)\n",
-    "    celltypist_df.to_parquet(celltypist_source_v2_local)\n",
+    "description = \"CellTypist Pan Immune Atlas v2: basic cell type information\"\n",
+    "celltypist_source_v2_url = \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
     "\n",
+    "# our source data\n",
+    "celltypist_file = ln.File.select(description=description).one_or_none()\n",
+    "\n",
+    "if celltypist_file is None:\n",
+    "    celltypist_df = pd.read_excel(celltypist_source_v2_url)\n",
+    "    celltypist_file = ln.File(celltypist_df).save()\n",
+    "else:\n",
+    "    celltypist_df = celltypist_file.load().head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It provides an `ontology_id` of the public Cell Ontology for the majority of records."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "celltypist_df.head()"
    ]
   },
@@ -169,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And we observed that certain \"Cell Ontology ID\" is associated with multiple \"Low-hierarchy cell types\":"
+    "The \"Cell Ontology ID\" is associated with multiple \"Low-hierarchy cell types\":"
    ]
   },
   {
@@ -186,37 +210,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CellTypist uses different hierarchies of cell types (`High-hierarchy cell types` and `Low-hierarchy cell types`). By taking the intersection of both levels we learn that 4 terms of the `High-hierarchy cell types` are not mapped to Cell Ontology:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "high_terms = celltypist_df[\"High-hierarchy cell types\"].unique()\n",
-    "low_terms = celltypist_df[\"Low-hierarchy cell types\"].unique()\n",
+    "### Inspect mapability with the public Cell Ontology\n",
     "\n",
-    "high_terms_umapped = set(high_terms).difference(low_terms)\n",
-    "high_terms_umapped"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Check compliance with the public Cell Ontology\n",
+    "For any cell type record that can be mapped against the public Cell Ontology, we'd like to ensure that it's actually mapped.\n",
     "\n",
-    "We want to ensure that all of our cell types of any dataset are eventually mapped against the Cell Ontology and queryable. Let's first do a few inspections and see how well they align with each other"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This will avoid that we'll refer to the same cell type with different identifiers.\n",
+    "\n",
+    "Let's see how well the Cell Typist reference data can be mapped.\n",
+    "\n",
     "All Celltypist labeled ontology IDs are mappable to the public Cell Ontology:"
    ]
   },
@@ -251,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After doing a search, we found a lot of terms that named in plural form in Celltypist are singular form in Cell Ontology: "
+    "A search tells us that terms that are named in plural in Cell Typist occur with a name in singular in the Cell Ontology: "
    ]
   },
   {
@@ -277,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try to strip out the `s` and now more names are mappable:"
+    "Let's try to strip `\"s\"` and inspect if more names are mappable. Yes, there are!"
    ]
   },
   {
@@ -297,7 +298,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register CellTypist encyclopedia in LaminDB"
+    "Every \"low-hierarchy cell type\" has an ontology id and most \"high-hierarchy cell types\" also appear as \"low-hierarchy cell types\" in the Cell Typist table. Four, however, don't, and therefore don't have an ontology ID."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_terms = celltypist_df[\"High-hierarchy cell types\"].unique()\n",
+    "low_terms = celltypist_df[\"Low-hierarchy cell types\"].unique()\n",
+    "\n",
+    "high_terms_umapped = set(high_terms).difference(low_terms)\n",
+    "high_terms_umapped"
    ]
   },
   {
@@ -305,7 +319,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first add the \"High-hierarchy cell types\" as a column \"parent\":"
+    "### Register CellTypist records in LaminDB"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's first add the \"High-hierarchy cell types\" as a column `\"parent\"`.\n",
+    "\n",
+    "This enables LaminDB to populate the `parents` and `children` fields, which will enable you to query for hierarchical relationships."
    ]
   },
   {
@@ -316,7 +340,7 @@
    "source": [
     "celltypist_df[\"parent\"] = celltypist_df.pop(\"High-hierarchy cell types\")\n",
     "\n",
-    "# if Hign and Low terms are the same, no parents\n",
+    "# if high and low terms are the same, no parents\n",
     "celltypist_df.loc[\n",
     "    (celltypist_df[\"parent\"] == celltypist_df[\"Low-hierarchy cell types\"]), \"parent\"\n",
     "] = None\n",
@@ -340,6 +364,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's create records from the public ontology:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -351,14 +383,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# use ontology_id as keys\n",
-    "\n",
-    "public_records_dict = {r.ontology_id: r for r in public_records}"
+    "Let's now amend public ontology records so that they maintain additional annotations that Cell Typist might have."
    ]
   },
   {
@@ -368,6 +397,7 @@
    "outputs": [],
    "source": [
     "records_names = {}\n",
+    "public_records_dict = {r.ontology_id: r for r in public_records}\n",
     "\n",
     "for _, row in celltypist_df.iterrows():\n",
     "    name = row[\"name\"]\n",
@@ -444,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's save them to our database (you will notice parents records from public ontology is also saved):"
+    "Let's save them to our database:"
    ]
   },
   {
@@ -480,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_terms_umapped"
+    "list(high_terms_umapped)"
    ]
   },
   {
@@ -488,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other than \"T cells\", we didn't find good matches in the public ontology."
+    "Let's get the top hits from a search:"
    ]
   },
   {
@@ -498,7 +528,7 @@
    "outputs": [],
    "source": [
     "search_results = []\n",
-    "for term in high_terms_umapped:\n",
+    "for term in list(high_terms_umapped):\n",
     "    search_results.append(celltype_bt.search(term, top_hit=True))\n",
     "\n",
     "search_results"
@@ -509,10 +539,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we decided to:\n",
+    "So we decide to:\n",
     "\n",
     "- Add the \"T cells\" to the synonyms of the public \"T cell\" record\n",
-    "- Create the rest 3 terms only using their names"
+    "- Create the remaining 3 terms only using their names (we think \"B cell lineage\" shouldn't be identified with \"B cell\")"
    ]
   },
   {
@@ -628,7 +658,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_lookup.memory_b_cell.parents.all()[0].parents.all()"
+    "db_lookup.memory_b_cell.parents.all()[1].parents.all()"
    ]
   },
   {
@@ -746,23 +776,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's enable tracking of the current notebook as the transform of this file using {func}`docs:lamindb.track`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.track()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Create a file record using {func}`docs:lamindb.File` of the AnnData object.\n",
     "We further define a name of the dataset for clarity that can also be queried for."
    ]
@@ -773,7 +786,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated = ln.File(adata_annotated, key=\"sample_cell_by_gene-celltypist.h5ad\")"
+    "file_annotated = ln.File(adata_annotated, description=\"Examplary CellTypist file\")"
    ]
   },
   {
@@ -833,24 +846,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.select(files__description__icontains=\"celltypist\").df()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lamin makes it easy to annotate cell types with ontology information and to track any datasets with such annotated cell types.\n",
-    "It does not matter whether the cell types where already a part of an ontology or newly found - Lamin supports both use-cases."
+    "ln.Transform.select(files__description__icontains=\"CellTypist\").df()"
    ]
   },
   {
