--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -427,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset = ln.File(adata_subset.to_adata(), key=\"subset/mini_anndata_with_obs.h5ad\")"
+    "file_subset = ln.File(adata_subset.to_memory(), key=\"subset/mini_anndata_with_obs.h5ad\")"
    ]
   },
   {
