⬆️ Removed top_hit param

--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bt.search(celltypist_df[\"Low-hierarchy cell types\"][0], top_hit=True)"
+    "celltype_bt.search(celltypist_df[\"Low-hierarchy cell types\"][0]).head()"
    ]
   },
   {
@@ -527,11 +527,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_results = []\n",
     "for term in list(high_terms_umapped):\n",
-    "    search_results.append(celltype_bt.search(term, top_hit=True))\n",
-    "\n",
-    "search_results"
+    "    print(f\"Term: {term}\")\n",
+    "    print(celltype_bt.search(term).head(1))"
    ]
   },
   {
