--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example use-case we will track an AnnData object throughout its lifecycle."
+    "In this usecase use-case we will track an AnnData object throughout its lifecycle."
    ]
   },
   {
@@ -610,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is available at [https://github.com/laminlabs/lamin-examples](https://github.com/laminlabs/lamin-examples)."
+    "This notebook is available at [https://github.com/laminlabs/lamin-usecases](https://github.com/laminlabs/lamin-usecases)."
    ]
   }
  ],
