--- a/docs/usecases/celltypist.ipynb
+++ b/docs/usecases/celltypist.ipynb
@@ -818,7 +818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can track the file and search for it for example by querying for a specific cell type."
+    "Now we can track the file and search for it for usecase by querying for a specific cell type."
    ]
   },
   {
@@ -860,7 +860,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is available at [https://github.com/laminlabs/lamin-examples](https://github.com/laminlabs/lamin-examples)."
+    "This notebook is available at [https://github.com/laminlabs/lamin-usecases](https://github.com/laminlabs/lamin-usecases)."
    ]
   },
   {
