--- a/docs/usecases/enrichr.ipynb
+++ b/docs/usecases/enrichr.ipynb
@@ -88,7 +88,7 @@
     "import scanpy as sc\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from lamin_examples import datasets as ds\n",
+    "from lamin_usecases import datasets as ds\n",
     "\n",
     "ln.settings.verbosity = 3  # show hints"
    ]
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This analysis is based on: https://gseapy.readthedocs.io/en/master/singlecell_example.html"
+    "This analysis is based on: https://gseapy.readthedocs.io/en/master/singlecell_usecase.html"
    ]
   },
   {
@@ -813,7 +813,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Registering pathways and associated gene sets is made simple with {func}`docs:lamindb.parse` that ensures that all parsed objects are linked to ontology IDs.Linking both sets is possible with {func}`docs:lamindb.Featureset` to facilitate simple querying for datasets that contain specific pathways. Since the pathways are linked to genes, Lamin also enables fetching the associated genes of a registered pathway to, for example, retrieve sets of differentially expressed genes that are a part of a specific pathway."
+    "Registering pathways and associated gene sets is made simple with {func}`docs:lamindb.parse` that ensures that all parsed objects are linked to ontology IDs.Linking both sets is possible with {func}`docs:lamindb.Featureset` to facilitate simple querying for datasets that contain specific pathways. Since the pathways are linked to genes, Lamin also enables fetching the associated genes of a registered pathway to, for usecase, retrieve sets of differentially expressed genes that are a part of a specific pathway."
    ]
   },
   {
@@ -829,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is available at [https://github.com/laminlabs/lamin-examples](https://github.com/laminlabs/lamin-examples)."
+    "This notebook is available at [https://github.com/laminlabs/lamin-usecases](https://github.com/laminlabs/lamin-usecases)."
    ]
   }
  ],
