--- a/docs/datatype/10-scrna.ipynb
+++ b/docs/datatype/10-scrna.ipynb
@@ -551,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "🎉 Now let's continue with data integration: {doc}`/biology/scrna-1`"
+    "🎉 Now let's continue with data integration: {doc}`./scrna-1`"
    ]
   }
  ],
