--- a/docs/datatype/20-scrna-1.ipynb
+++ b/docs/datatype/20-scrna-1.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can easily standardize them using {meth}`~lamindb.dev.Registry.map_synonyms`:"
+    "We can easily standardize them using `.map_synonyms`:"
    ]
   },
   {
