--- a/docs/datatype/20-scrna-1.ipynb
+++ b/docs/datatype/20-scrna-1.ipynb
@@ -123,6 +123,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2_adata.obs.cell_type"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -210,50 +219,6 @@
     "    file1_adata.obs[\"cell_type\"].isin(shared_celltypes_names)\n",
     "]\n",
     "file1_adata_subset.obs[\"cell_type\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "But when we subset the 2nd file, we don't see the two cell types, why?\n",
-    "\n",
-    "Because they are labeled with synonyms!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file2_adata_subset = file2_adata[\n",
-    "    file2_adata.obs[\"cell_type\"].isin(shared_celltypes_names)\n",
-    "]\n",
-    "file2_adata_subset.obs[\"cell_type\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can easily standardize them using `.map_synonyms`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file2_adata.obs[\"cell_type\"] = lb.CellType.map_synonyms(file2_adata.obs[\"cell_type\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we have the two cell types:"
    ]
   },
   {
