--- a/docs/datatype/10-scrna.ipynb
+++ b/docs/datatype/10-scrna.ipynb
@@ -347,8 +347,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features.add_labels(species, feature=\"species\")\n",
-    "file.features.add_labels(strains + dev_stages + tissues + cell_types)"
+    "file.add_labels(species, feature=\"species\")\n",
+    "file.add_labels(strains + dev_stages + tissues + cell_types)"
    ]
   },
   {
@@ -380,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features.add_labels(labels)"
+    "file.add_labels(labels)"
    ]
   },
   {
@@ -520,8 +520,8 @@
    },
    "outputs": [],
    "source": [
-    "file.features.add_labels([lb.settings.species], feature=\"species\")\n",
-    "file.features.add_labels(cell_types + efs + tissues)"
+    "file.add_labels([lb.settings.species], feature=\"species\")\n",
+    "file.add_labels(cell_types + efs + tissues)"
    ]
   },
   {
@@ -538,7 +538,7 @@
    "outputs": [],
    "source": [
     "donors = ln.Label.from_values(conde22.obs[\"donor\"])\n",
-    "file.features.add_labels(donors)"
+    "file.add_labels(donors)"
    ]
   },
   {
@@ -709,7 +709,7 @@
    "outputs": [],
    "source": [
     "cell_types = lb.CellType.from_values(pbcm68k_validated.obs[\"cell_type\"], \"name\")\n",
-    "file_pbcm68k.features.add_labels(cell_types)"
+    "file_pbcm68k.add_labels(cell_types)"
    ]
   },
   {
